--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,11 @@ Title: Chemical Information from the Web
 Version: 0.0.1
 Date: 2015-03-05
 Author: Eduard Szöcs
-Maintainer: Eduard Szoecs <eduardszoecs@gmail.com>
+Maintainer: Eduard Szöcs <eduardszoecs@gmail.com>
 Description: Chemical information from around the web. This package interacts with a suite of web APIs for chemical inforamtion.
 URL: https://github.com/EDiLD/webchem
 BugReports: https://github.com/EDiLD/webchem/issues
-License: file LICENSE
+License: CC BY 4.0
 LazyLoad: yes
 LazyData: yes
 Imports:
