--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.0.1
 Date: 2015-03-05
 Author: Eduard Szöcs
 Maintainer: Eduard Szoecs <eduardszoecs@gmail.com>
-Description: Chemical information from around the web. This package interacts with a suite of web APIs for chemical inforamtion.
+Description: Chemical information from around the web. This package interacts with a suite of web APIs for chemical information.
 URL: https://github.com/EDiLD/webchem
 BugReports: https://github.com/EDiLD/webchem/issues
 License: CC BY 4.0
