--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(cts_compinfo)
 export(cts_convert)
 export(get_cid)
 export(get_csid)
+export(pan)
 import(RCurl)
 import(RJSONIO)
 import(XML)
