--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: webchem
-Type: Package
 Title: Chemical Information from the Web
+Description: Chemical information from around the web. This package interacts with a suite of web APIs for chemical information.
+Type: Package
 Version: 0.0.2
 Date: 2015-03-05
-Author: Eduard Szoecs
-Maintainer: Eduard Szoecs <eduardszoecs@gmail.com>
-Description: Chemical information from around the web. This package interacts with a suite of web APIs for chemical information.
+License: MIT + file LICENSE
 URL: https://github.com/EDiLD/webchem
 BugReports: https://github.com/EDiLD/webchem/issues
-License: MIT + file LICENSE
+Authors@R: c(person("Eduard", "Szoecs", role = c("aut", "cre"),
+    email = "eduardszoecs@gmail.com"),
+    person("Daniel", "Muench", role = "ctb"))
 LazyLoad: yes
 LazyData: yes
 Imports:
