--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,10 +20,12 @@ on_failure:
   - travis-tool.sh dump_logs
 
 notifications:
-  - provider: Slack
-    auth_token:
-      secure: S3AcHEoJHUtahR5N8ConStS8oV/+x34tS1bDGM3OD0QxDKBBxufeiMmXQsId1gZu
-    channel: builds
+  - provider: Email
+    to:
+      - eduardszoecs@gmail.com
+    on_build_success: false
+    on_build_failure: true
+    on_build_status_changed: true
 
 artifacts:
   - path: '*.Rcheck\**\*.log'
