--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ BugReports: https://github.com/EDiLD/webchem/issues
 Authors@R: c(person("Eduard", "Szoecs", role = c("aut", "cre"),
     email = "eduardszoecs@gmail.com"),
     person("Daniel", "Muench", role = "ctb"))
+Maintainer: Eduard Szoecs <eduardszoecs@gmail.com>
 LazyLoad: yes
 LazyData: yes
 Imports:
