--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,9 @@ notifications:
     - szoecs@uni-landau.de
     on_success: never
     on_failure: always
+
+# whitelist
+branches:
+  only:
+    - master
+    - release
