--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(cts_convert)
 export(get_cid)
 export(get_csid)
 export(pan)
+export(physprop)
 import(RCurl)
 import(XML)
 import(jsonlite)
