Try travis.yml from metacran

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,28 @@
-language: r
+## Sample .travis.yml file for use with metacran/r-builder
+## See https://github.com/metacran/r-builder for detail
+language: c
 sudo: required
 
-r_github_packages:
- - jimhester/robustr
- - jimhester/covr
- - jeroenooms/curl
+before_install:
+  - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
+  - chmod 755 pkg-build.sh
+  - ./pkg-build.sh bootstrap
+
+install:
+  - ./pkg-build.sh install_deps
+  - ./pkg-build.sh install_github jimhester/robustr
+  - ./pkg-build.sh install_github jimhester/covr
+  - ./pkg-build.sh install_github jeroenooms/curl
+
+script:
+  - ./pkg-build.sh run_tests
+
+after_script:
+  - ./travis-tool.sh dump_logs_by_extension "timings"
+  - ./travis-tool.sh dump_sysinfo
+
+after_failure:
+  - ./pkg-build.sh dump_logs
 
 after_success:
   - Rscript -e 'library(covr); coveralls()'
@@ -15,3 +33,13 @@ notifications:
     - szoecs@uni-landau.de
     on_success: never
     on_failure: always
+
+env:
+  matrix:
+    - RVERSION=oldrel
+    - RVERSION=release
+    - RVERSION=devel
+
+  global:
+    - R_CHECK_ARGS="--no-build-vignettes --no-manual --timings --as-cran"
+    - _R_CHECK_TIMINGS_="0"
