--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  R_CHECK_ARGS: --no-build-vignettes --no-manual
+  R_CHECK_ARGS: --no-build-vignettes --no-manual --timings --as-cran
 
 init:
   ps: |
