starter with etox

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cts_compinfo)
 export(cts_convert)
 export(get_cid)
 export(get_csid)
+export(get_etoxid)
 export(pan)
 export(physprop)
 import(RCurl)
