--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
 script:
   - ./pkg-build.sh run_tests
 
+# print timings and sysinfo
 after_script:
   - ./pkg-build.sh dump_logs_by_extension "timings"
   - ./pkg-build.sh dump_sysinfo
@@ -24,8 +25,9 @@ after_script:
 after_failure:
   - ./pkg-build.sh dump_logs
 
+# report to coveralls
 after_success:
-  - ./pkg_build.sh run_script 'library(covr); coveralls()'
+  - ./pkg-build.sh run_script -e 'covr::codecov()'
 
 notifications:
   email:
