--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(csid_compinfo)
 export(csid_extcompinfo)
 export(cts_compinfo)
 export(cts_convert)
+export(etox_basic)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
