--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(csid_extcompinfo)
 export(cts_compinfo)
 export(cts_convert)
 export(etox_basic)
+export(etox_targets)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
