--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cts_compinfo)
 export(cts_convert)
 export(etox_basic)
 export(etox_targets)
+export(etox_tests)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
