started work on ppdb_*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,11 @@ export(get_csid)
 export(get_etoxid)
 export(pan)
 export(physprop)
+export(ppdb_buildidx)
 import(RCurl)
 import(XML)
 import(jsonlite)
+import(stringr)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
 importFrom(utils,read.table)
