--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get_etoxid)
 export(pan)
 export(physprop)
 export(ppdb_buildidx)
+export(ppdb_query)
 import(RCurl)
 import(XML)
 import(jsonlite)
