--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ notifications:
 
 env:
   matrix:
-    - RVERSION=oldrel
+#    - RVERSION=oldrel
     - RVERSION=release
     - RVERSION=devel COVERAGE=true
 
