more work on chemid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(alanwood)
 export(allanwood)
+export(chemid)
 export(cid_compinfo)
 export(cir_query)
 export(csid_compinfo)
@@ -23,6 +24,7 @@ import(RCurl)
 import(XML)
 import(jsonlite)
 import(stringr)
+import(xml2)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
 importFrom(utils,read.table)
