--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(extr_num)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
+export(is.cas)
 export(is.inchikey)
 export(pan)
 export(physprop)
