ppdb() replaces ppdb_query(); ppdb() accepts index built by ppdb_buildidx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(is.cas)
 export(is.inchikey)
 export(pan)
 export(physprop)
+export(ppdb)
 export(ppdb_buildidx)
 export(ppdb_query)
 import(RCurl)
