--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,6 @@ after_failure:
 # report to coveralls
 after_success:
   - if [[ ! -z "$COVERAGE" ]];then ./pkg-build.sh run_script -e 'covr::codecov(quiet = FALSE)'; fi
-  # - if [[ ! -z "$COVERAGE" ]];then ./pkg-build.sh run_script -e 'covr::coveralls(coverage = print(covr::package_coverage(quiet = FALSE)))'; fi
 
 notifications:
   email:
@@ -40,7 +39,7 @@ notifications:
 env:
   matrix:
     # - RVERSION=oldrel
-    - RVERSION=release
+    - RVERSION=3.2.2
     - RVERSION=devel COVERAGE=true
 
   global:
