--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(alanwood)
 export(allanwood)
 export(chemid)
 export(cid_compinfo)
+export(cir)
 export(cir_query)
 export(csid_compinfo)
 export(csid_extcompinfo)
