--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: webchem
 Title: Chemical Information from the Web
-Description: Chemical information from around the web. This package interacts with a suite of web APIs for chemical information.
+Description: Chemical information from around the web. This package interacts
+    with a suite of web APIs for chemical information.
 Type: Package
 Version: 0.0.3
 Date: 2015-08-14
@@ -19,3 +20,4 @@ Imports:
     jsonlite
 Suggests:
     testthat
+RoxygenNote: 5.0.0
