renamed csid_* to cs_*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(chemid)
 export(cid_compinfo)
 export(cir)
 export(cir_query)
+export(cs_compinfo)
+export(cs_extcompinfo)
 export(csid_compinfo)
 export(csid_extcompinfo)
 export(cts_compinfo)
