added molfile parser

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(get_etoxid)
 export(is.cas)
 export(is.inchikey)
 export(pan)
+export(parse_mol)
 export(physprop)
 export(ppdb)
 export(ppdb_buildidx)
