added csid_to_mol converter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ import(RCurl)
 import(XML)
 import(jsonlite)
 import(stringr)
+import(xml2)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
 importFrom(utils,read.table)
