--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(get_csid)
 export(get_etoxid)
 export(is.cas)
 export(is.inchikey)
+export(is.inchikey_cs)
 export(pan)
 export(parse_mol)
 export(physprop)
