--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cid_compinfo)
 export(cir)
 export(cir_query)
 export(cs_compinfo)
+export(cs_csid_mol)
 export(cs_extcompinfo)
 export(csid_compinfo)
 export(csid_extcompinfo)
