add citation fix encoding

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,13 +8,14 @@ Date: 2015-10-16
 License: MIT + file LICENSE
 URL: https://github.com/ropensci/webchem
 BugReports: https://github.com/ropensci/webchem/issues
-Authors@R: c(person("Eduard", "Szoecs", role = c("aut", "cre"),
+Authors@R: c(person("Eduard", "Szöcs", role = c("aut", "cre"),
     email = "eduardszoecs@gmail.com"),
     person("Daniel", "Muench", role = "ctb"),
     person("Johannes Ranke", role = "ctb"))
 Maintainer: Eduard Szoecs <eduardszoecs@gmail.com>
 LazyLoad: yes
 LazyData: yes
+Encoding: UTF-8
 Depends:
     R (>= 2.10)
 Imports:
