--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cir_query)
 export(cs_compinfo)
 export(cs_csid_mol)
 export(cs_extcompinfo)
+export(cs_inchikey_csid)
 export(csid_compinfo)
 export(csid_extcompinfo)
 export(cts_compinfo)
