--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(cs_compinfo)
 export(cs_csid_mol)
 export(cs_extcompinfo)
 export(cs_inchikey_csid)
+export(cs_inchikey_inchi)
 export(csid_compinfo)
 export(csid_extcompinfo)
 export(cts_compinfo)
