--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(cs_csid_mol)
 export(cs_extcompinfo)
 export(cs_inchikey_csid)
 export(cs_inchikey_inchi)
+export(cs_inchikey_mol)
 export(csid_compinfo)
 export(csid_extcompinfo)
 export(cts_compinfo)
