add inchi_csid, minor fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cir_query)
 export(cs_compinfo)
 export(cs_csid_mol)
 export(cs_extcompinfo)
+export(cs_inchi_csid)
 export(cs_inchikey_csid)
 export(cs_inchikey_inchi)
 export(cs_inchikey_mol)
@@ -34,6 +35,7 @@ export(ppdb_buildidx)
 export(ppdb_query)
 import(RCurl)
 import(XML)
+import(httr)
 import(jsonlite)
 import(stringr)
 import(xml2)
