--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(cs_compinfo)
 export(cs_csid_mol)
 export(cs_extcompinfo)
 export(cs_inchi_csid)
+export(cs_inchi_inchikey)
 export(cs_inchikey_csid)
 export(cs_inchikey_inchi)
 export(cs_inchikey_mol)
