--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(cs_csid_mol)
 export(cs_extcompinfo)
 export(cs_inchi_csid)
 export(cs_inchi_inchikey)
+export(cs_inchi_mol)
 export(cs_inchikey_csid)
 export(cs_inchikey_inchi)
 export(cs_inchikey_mol)
