--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(cs_extcompinfo)
 export(cs_inchi_csid)
 export(cs_inchi_inchikey)
 export(cs_inchi_mol)
+export(cs_inchi_smiles)
 export(cs_inchikey_csid)
 export(cs_inchikey_inchi)
 export(cs_inchikey_mol)
