--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(cs_inchi_smiles)
 export(cs_inchikey_csid)
 export(cs_inchikey_inchi)
 export(cs_inchikey_mol)
+export(cs_smiles_inchi)
 export(csid_compinfo)
 export(csid_extcompinfo)
 export(cts_compinfo)
