--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Authors@R: c(person("Eduard", "Szöcs", role = c("aut", "cre"),
     email = "eduardszoecs@gmail.com"),
     person("Daniel", "Muench", role = "ctb"),
     person("Johannes Ranke", role = "ctb"))
-Maintainer: Eduard Szoecs <eduardszoecs@gmail.com>
+Maintainer: Eduard Szöcs <eduardszoecs@gmail.com>
 LazyLoad: yes
 LazyData: yes
 Encoding: UTF-8
