xml2 httr rvest

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ import(RCurl)
 import(XML)
 import(httr)
 import(jsonlite)
+import(rvest)
 import(stringr)
 import(xml2)
 importFrom(utils,URLencode)
