final fixes for issue #30

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,12 +39,11 @@ export(ppdb)
 export(ppdb_buildidx)
 export(ppdb_query)
 import(RCurl)
-import(XML)
 import(httr)
 import(jsonlite)
-import(rvest)
 import(stringr)
 import(xml2)
+importFrom(rvest,html_table)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
 importFrom(utils,read.table)
