started with wikidata support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(extr_num)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
+export(get_wdid)
 export(is.cas)
 export(is.inchikey)
 export(is.inchikey_cs)
