--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(get_etoxid)
 export(is.cas)
 export(is.inchikey)
 export(is.inchikey_cs)
+export(is.smiles)
 export(pan)
 export(parse_mol)
 export(physprop)
@@ -41,6 +42,7 @@ export(ppdb_query)
 import(RCurl)
 import(httr)
 import(jsonlite)
+import(rcdk)
 import(stringr)
 import(xml2)
 importFrom(rvest,html_table)
