--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
-env:
+env
   global:
-    - R_BUILD_ARGS="--no-manual""
-    - R_CHECK_ARGS="--no-build-vignettes --no-manual --timings --as-cran""
+    - R_BUILD_ARGS="--no-manual"
+    - R_CHECK_ARGS="--no-build-vignettes --no-manual --timings --as-cran"
 
 init:
   ps: |
