--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 environment:
     R_BUILD_ARGS: --no-manual
     R_CHECK_ARGS: --no-build-vignettes --no-manual --timings --as-cran
+    JAVA_HOME: C:\Program Files\Java\jdk1.7.0
 
 init:
   ps: |
