--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 environment:
     R_BUILD_ARGS: --no-manual
     R_CHECK_ARGS: --no-build-vignettes --no-manual --timings --as-cran
-    JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+    JAVA_HOME: C:\Program Files\Java\jre7
 
 init:
   ps: |
