--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 environment:
     R_BUILD_ARGS: --no-manual
-    R_CHECK_ARGS: --no-build-vignettes --no-manual --timings --as-cran
+    R_CHECK_ARGS: --no-build-vignettes --no-manual --timings --as-cran --no-multiarch
+    R_INSTALL_ARGS: --no-multiarch
 
 init:
   ps: |
