--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(physprop)
 export(ppdb)
 export(ppdb_buildidx)
 export(ppdb_query)
+export(wd_ident)
 import(RCurl)
 import(httr)
 import(jsonlite)
