--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,9 +13,9 @@ install:
   ps: Bootstrap
 
 build_script:
-  - set JAVA_HOME=C:\Program Files\Java\jdk1.8.0\jre
-  - set PATH=C:\Program Files\Java\jdk1.8.0\bin;C:\Program Files\Java\jdk1.8.0\jre\bin\server;%PATH%
-  - ls "C:\Program Files\Java\jdk1.8.0\jre"
+  - set JAVA_HOME=C:\Program Files (x86)\Java\jdk1.8.0\jre
+  - set PATH=C:\Program Files (x86)\Java\jdk1.8.0\bin;C:\Program Files (x86)\Java\jdk1.8.0\jre\bin\server;%PATH%
+  - ls "C:\Program Files (x86)\Java\jdk1.8.0\jre"
   - travis-tool.sh install_deps
 
 test_script:
