--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(is.inchikey)
 export(is.inchikey_cs)
 export(is.smiles)
 export(pan)
+export(pan_query)
 export(parse_mol)
 export(physprop)
 export(ppdb)
