--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(pan)
 export(pan_query)
 export(parse_mol)
 export(physprop)
+export(pp_query)
 export(ppdb)
 export(ppdb_buildidx)
 export(ppdb_query)
