--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(alanwood)
 export(aw_query)
 export(chemid)
-export(cid_compinfo)
 export(cir)
 export(cir_query)
 export(cs_compinfo)
@@ -29,6 +28,7 @@ export(extr_num)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
+export(get_pcid)
 export(get_wdid)
 export(is.cas)
 export(is.inchikey)
@@ -37,6 +37,7 @@ export(is.smiles)
 export(pan)
 export(pan_query)
 export(parse_mol)
+export(pc_compinfo)
 export(physprop)
 export(pp_query)
 export(ppdb)
