--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(alanwood)
 export(aw_query)
 export(chemid)
+export(cid_compinfo)
 export(cir)
 export(cir_query)
 export(cs_compinfo)
@@ -33,6 +34,7 @@ export(get_wdid)
 export(is.cas)
 export(is.inchikey)
 export(is.inchikey_cs)
+export(is.inchikey_format)
 export(is.smiles)
 export(pan)
 export(pan_query)
