Add note to terms & conditions; fixed namespace issues;

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ import(rcdk)
 import(stringr)
 import(xml2)
 importFrom(rvest,html_table)
+importFrom(stats,rgamma)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
 importFrom(utils,read.table)
