--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(cs_inchi_smiles)
 export(cs_inchikey_csid)
 export(cs_inchikey_inchi)
 export(cs_inchikey_mol)
+export(cs_prop)
 export(cs_smiles_inchi)
 export(csid_compinfo)
 export(csid_extcompinfo)
