removed ppdb_query() due to copyright issues. ppad_parse() is a new function that parses html code from ppdb (but does not download any data).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,7 @@ export(pc_compinfo)
 export(physprop)
 export(pp_query)
 export(ppdb)
-export(ppdb_buildidx)
+export(ppdb_parse)
 export(ppdb_query)
 export(wd_ident)
 import(RCurl)
