added cts_from and cts_tpo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(csid_compinfo)
 export(csid_extcompinfo)
 export(cts_compinfo)
 export(cts_convert)
+export(cts_from)
+export(cts_to)
 export(etox_basic)
 export(etox_targets)
 export(etox_tests)
