pp_query handles multiple inputs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ import(stringr)
 import(xml2)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
+importFrom(stats,setNames)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
 importFrom(utils,read.table)
