--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,8 @@ export(is.inchikey_format)
 export(is.smiles)
 export(pan_query)
 export(parse_mol)
-export(pc_compinfo)
+export(pc_prop)
+export(pc_synonyms)
 export(pp_query)
 export(ppdb)
 export(ppdb_parse)
