--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(is.inchikey)
 export(is.inchikey_cs)
 export(is.inchikey_format)
 export(is.smiles)
+export(opsin_query)
 export(pan_query)
 export(parse_mol)
 export(pc_prop)
