add extractor functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,22 @@
 S3method(cas,default)
 S3method(cas,pan_query)
 S3method(cas,wd_ident)
+S3method(inchikey,cs_compinfo)
+S3method(inchikey,default)
+S3method(inchikey,etox_basic)
+S3method(inchikey,opsin_query)
+S3method(inchikey,pan_query)
+S3method(inchikey,pc_prop)
+S3method(inchikey,wd_ident)
+S3method(smiles,aw_query)
+S3method(smiles,cs_compinfo)
+S3method(smiles,cts_compinfo)
+S3method(smiles,default)
+S3method(smiles,etox_basic)
+S3method(smiles,opsin_query)
+S3method(smiles,pan_query)
+S3method(smiles,pc_prop)
+S3method(smiles,wd_ident)
 export(aw_query)
 export(build_aw_idx)
 export(cas)
@@ -35,6 +51,7 @@ export(get_cid)
 export(get_csid)
 export(get_etoxid)
 export(get_wdid)
+export(inchikey)
 export(is.cas)
 export(is.inchikey)
 export(is.inchikey_cs)
@@ -49,6 +66,7 @@ export(pp_query)
 export(ppdb)
 export(ppdb_parse)
 export(ppdb_query)
+export(smiles)
 export(wd_ident)
 import(RCurl)
 import(httr)
