--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(cas,default)
 S3method(cas,pan_query)
 S3method(cas,wd_ident)
 S3method(inchikey,cs_compinfo)
+S3method(inchikey,cs_extcompinfo)
 S3method(inchikey,default)
 S3method(inchikey,etox_basic)
 S3method(inchikey,opsin_query)
@@ -12,6 +13,7 @@ S3method(inchikey,pc_prop)
 S3method(inchikey,wd_ident)
 S3method(smiles,aw_query)
 S3method(smiles,cs_compinfo)
+S3method(smiles,cs_extcompinfo)
 S3method(smiles,cts_compinfo)
 S3method(smiles,default)
 S3method(smiles,etox_basic)
