--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,15 @@
-language: R
+language: r
 sudo: false
 cache: packages
 
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 
-matrix:
-  r:
-    - release
-    - devel COVERAGE=true
-
-env:
-  - _R_CHECK_TIMINGS_="0"
-
+r_github_packages:
+  - jimhester/covr
 
 # report to coveralls
 after_success:
-  - if [[ ! -z "$COVERAGE" ]];then ./pkg-build.sh run_script -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
+  - Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'
 
 # report to maintainer
 notifications:
