--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: r
 sudo: false
 cache: packages
 
+r:
+  - release
+  - devel
+
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 
 r_github_packages:
