--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache: packages
 
 r:
   - release
-  - devel
+  - devel COVERAGE=true
 
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 
@@ -13,7 +13,7 @@ r_github_packages:
 
 # report to coveralls
 after_success:
-  - Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'
+  - if [[ ! -z "$COVERAGE" ]];then ./pkg-build.sh run_script -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
 
 # report to maintainer
 notifications:
