--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache: packages
 
 r:
   - release
-  - devel COVERAGE=true
+  - devel
 
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 
