--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ r_github_packages:
 
 # report to coveralls
 after_success:
-  - if [[ ! -z "$COVERAGE" ]];then ./pkg-build.sh run_script -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
+  - Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'
+#  - if [[ ! -z "$COVERAGE" ]];then Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
 
 # report to maintainer
 notifications:
