--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,11 @@ r:
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 warnings_are_errors: false
 
-addons:
-  apt:
-    packages:
-      - libcurl4-openssl-dev
+apt_packages:
+  - libcurl4-openssl-dev
 
 r_github_packages:
+  - jimhester/covr
   - jeroenooms/curl
 
 
