--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ r:
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 warnings_are_errors: false
 
-apt_packages:
-  - libcurl4-openssl-dev
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
 
 r_github_packages:
   - jimhester/covr
