--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: r
-sudo: false
+# sudo: false
 cache: packages
 
 r:
@@ -8,10 +8,8 @@ r:
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 warnings_are_errors: false
 
-addons:
-  apt:
-    packages:
-      - libcurl4-openssl-dev
+apt_packages:
+  - libcurl4-openssl-dev
 
 r_binary_packages:
   - devtools
