--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: r
 sudo: false
 cache: packages
 
-r:
-  - devel
+env:
+  matrix:
+    -R=devel COVERAGE=true
+    -R=release
 
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 warnings_are_errors: false
@@ -22,10 +24,9 @@ r_github_packages:
   - jimhester/covr
 
 
-# report to coveralls
+# report to codecov
 after_success:
-  - Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'
-#  - if [[ ! -z "$COVERAGE" ]];then Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
+  - if [[ ! -z "$COVERAGE" ]];then Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
 
 # report to maintainer
 notifications:
