--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: r
 sudo: false
 cache: packages
 
-env:
-  matrix:
-    -R=devel COVERAGE=true
-    -R=release
+r:
+  - release
+  - devel
 
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 warnings_are_errors: false
@@ -26,7 +25,8 @@ r_github_packages:
 
 # report to codecov
 after_success:
-  - if [[ ! -z "$COVERAGE" ]];then Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
+  - Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'
+  # - if [[ ! -z "$COVERAGE" ]];then Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
 
 # report to maintainer
 notifications:
