--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,7 @@ cache: packages
 
 r:
   - release
-  - devel
-
-env:
-  matrix:
-    - COVERAGE=false
-    - COVERAGE=true
+  - devel COVERAGE=true
 
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 warnings_are_errors: false
