--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ sudo: false
 cache: packages
 
 r:
+  - devel
   - release
-  - devel COVERAGE=true
+
 
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
 warnings_are_errors: false
@@ -25,8 +26,7 @@ r_github_packages:
 
 # report to codecov
 after_success:
-  # - Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'
-  - if [[ ! -z "$COVERAGE" ]];then Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'; fi
+  - Rscript -e 'covr::codecov(exclusions = list("R/ppdb.R"), quiet = FALSE)'
 
 # report to maintainer
 notifications:
