--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ addons:
     packages:
     - libcurl4-openssl-dev
     - libxml2-dev
-    - oracle-java8-installer
+    - openjdk-8-jre
 
 r_packages:
   - devtools
@@ -29,9 +29,6 @@ r_packages:
 r_github_packages:
   - jimhester/covr
   - jeroenooms/curl
-
-before_script:
-  - sudo R CMD javareconf
 
 # report to codecov
 after_success:
