--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,13 @@ addons:
     packages:
     - libcurl4-openssl-dev
     - libxml2-dev
-    - r-cran-rjava
+    - openjdk-7-jre
+
+before_install:
+  - export JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64/jre
+  - export PATH=$PATH:$JAVA_HOME/bin
+  - export LD_LIBRARY_PATH=/usr/lib/jvm/java-8-oracle/lib/amd64:/usr/lib/jvm/java-8-oracle/jre/lib/amd64/server
+  - sudo R CMD javareconf
 
 r_packages:
   - devtools
