added first ping function for pubchem. Issue #118

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(pp_query)
 export(ppdb)
 export(ppdb_parse)
 export(ppdb_query)
+export(pubchem_ping)
 export(smiles)
 export(wd_ident)
 import(RCurl)
