more on ping fnx, fixed tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(cs_inchikey_inchi)
 export(cs_inchikey_mol)
 export(cs_prop)
 export(cs_smiles_inchi)
+export(cs_web_ping)
 export(cts_compinfo)
 export(cts_convert)
 export(cts_from)
@@ -76,6 +77,7 @@ import(httr)
 import(jsonlite)
 import(stringr)
 import(xml2)
+importFrom(methods,is)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
 importFrom(stats,setNames)
