--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: r
-sudo: required
+sudo: false
 cache: packages
 
 r:
@@ -20,12 +20,11 @@ addons:
     packages:
     - libcurl4-openssl-dev
     - libxml2-dev
-    - openjdk-7-jre
+    - oracle-java8-installer
 
 before_install:
-  - export JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64/jre
-  - export PATH=$PATH:$JAVA_HOME/bin
-  - export LD_LIBRARY_PATH=/usr/lib/jvm/java-8-oracle/lib/amd64:/usr/lib/jvm/java-8-oracle/jre/lib/amd64/server
+  - jdk_switcher use oraclejdk8
+  - java -version
 
 r_packages:
   - devtools
