--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Chemical Information from the Web
 Description: Chemical information from around the web. This package interacts
     with a suite of web APIs for chemical information.
 Type: Package
-Version: 0.1.2.9000
+Version: 0.1.2.9001
 Date: 2017-01-17
 License: MIT + file LICENSE
 URL: https://github.com/ropensci/webchem
@@ -11,7 +11,8 @@ BugReports: https://github.com/ropensci/webchem/issues
 Authors@R: c(person("Eduard", "Szöcs", role = c("aut", "cre"),
     email = "eduardszoecs@gmail.com"),
     person("Daniel", "Muench", role = "ctb"),
-    person("Johannes Ranke", role = "ctb"))
+    person("Johannes", "Ranke", role = "ctb"),
+    person("Eric", "Scott", role = "ctb"))
 Maintainer: Eduard Szöcs <eduardszoecs@gmail.com>
 LazyLoad: yes
 LazyData: yes
