--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ import(jsonlite)
 import(rvest)
 import(stringr)
 import(xml2)
+importFrom(curl,curl)
 importFrom(methods,is)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
