--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,6 @@ export(cs_inchikey_inchi)
 export(cs_inchikey_mol)
 export(cs_prop)
 export(cs_smiles_inchi)
-export(cs_web_ping)
 export(cts_compinfo)
 export(cts_convert)
 export(cts_from)
@@ -66,11 +65,13 @@ export(pan_query)
 export(parse_mol)
 export(pc_prop)
 export(pc_synonyms)
+export(ping_cs)
+export(ping_pan)
+export(ping_pubchem)
 export(pp_query)
 export(ppdb)
 export(ppdb_parse)
 export(ppdb_query)
-export(pubchem_ping)
 export(smiles)
 export(wd_ident)
 import(RCurl)
