document on pr #140

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,7 @@ addons:
     packages:
     - libcurl4-openssl-dev
     - libxml2-dev
-    - oracle-java8-installer
-
-before_install:
-  - jdk_switcher use oraclejdk8
-  - java -version
+    - r-cran-rjava
 
 r_packages:
   - devtools
