--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Title: Chemical Information from the Web
 Description: Chemical information from around the web. This package interacts
     with a suite of web APIs for chemical information.
 Type: Package
-Version: 0.3.0.9000
-Date: 2017-10-20
+Version: 0.3.0.9001
+Date: 2018-01-15
 License: MIT + file LICENSE
 URL: https://github.com/ropensci/webchem
 BugReports: https://github.com/ropensci/webchem/issues
@@ -13,7 +13,8 @@ Authors@R: c(person("Eduard", "Szöcs", role = c("aut", "cre"),
     person("Daniel", "Muench", role = "ctb"),
     person("Johannes", "Ranke", role = "ctb"),
     person("Eric", "Scott", role = "ctb"),
-    person("Jan", "Stanstrup", role = "ctb"))
+    person("Jan", "Stanstrup", role = "ctb"),
+    person("Robert", "Allaway", role = "ctb"))
 Maintainer: Eduard Szöcs <eduardszoecs@gmail.com>
 LazyLoad: yes
 LazyData: yes
