--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,30 @@
 language: r
-sudo: false
-# cache: packages
 r:
   - devel
 #  - release
-jdk:
-  - oraclejdk8
+
+sudo: required
+cache: packages
 env:
   global:
     - _R_CRAN_CHECK_INCOMING_=false
 r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
-warnings_are_errors: false
 r_check_revdep: false
+warnings_are_errors: false
 
-addons:
-  apt:
-    packages:
-    - libcurl4-openssl-dev
-    - libxml2-dev
-    - oracle-java8-installer
-    - r-cran-rjava
 
-before_install:
-  - export JAVA_HOME=/usr/lib/jvm/java-8-oracle/jre
-  - export PATH=$PATH:$JAVA_HOME/bin
-  - export LD_LIBRARY_PATH=/usr/lib/jvm/java-8-oracle/lib/amd64:/usr/lib/jvm/java-8-oracle/jre/lib/amd64/server
-  - sudo R CMD javareconf
+apt_packages:
+  - libcurl4-openssl-dev
+  - libxml2-dev
+  - default-jre
+  - default-jdk
 
 r_packages:
   - devtools
   - xml2
+
+r_binary_packages:
+ - testthat
 
 r_github_packages:
   - jimhester/covr
