--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ importFrom(methods,is)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
 importFrom(stats,setNames)
+importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
 importFrom(utils,menu)
