added as.cas(), a function that formats numeric vectors into CAS numbers with hyphens in the right place.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ S3method(smiles,opsin_query)
 S3method(smiles,pan_query)
 S3method(smiles,pc_prop)
 S3method(smiles,wd_ident)
+export(as.cas)
 export(aw_query)
 export(build_aw_idx)
 export(cas)
