Added various things to prevent dplyr from throwing build check errors regarding variables not existing in global environment. Combined several short functions into one long one.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,9 @@ Imports:
     RCurl,
     jsonlite,
     stringr,
-    methods
+    methods,
+    dplyr,
+    purrr
 Suggests:
     testthat,
     rcdk
