--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(etox_targets)
 export(etox_tests)
 export(extr_num)
 export(fn_percept)
+export(get_RI)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
@@ -76,12 +77,15 @@ export(ppdb_query)
 export(smiles)
 export(wd_ident)
 import(RCurl)
+import(dplyr)
 import(httr)
 import(jsonlite)
 import(rvest)
 import(stringr)
 import(xml2)
 importFrom(methods,is)
+importFrom(purrr,map)
+importFrom(purrr,map_dfr)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
 importFrom(stats,setNames)
