cleanup after merge.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,10 +51,10 @@ export(etox_targets)
 export(etox_tests)
 export(extr_num)
 export(fn_percept)
-export(get_RI)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
+export(get_ri)
 export(get_wdid)
 export(inchikey)
 export(is.cas)
@@ -92,5 +92,6 @@ importFrom(stats,setNames)
 importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
+importFrom(utils,globalVariables)
 importFrom(utils,menu)
 importFrom(utils,read.table)
