rename to nist_ri()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,7 +54,6 @@ export(fn_percept)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
-export(get_ri)
 export(get_wdid)
 export(inchikey)
 export(is.cas)
@@ -62,6 +61,7 @@ export(is.inchikey)
 export(is.inchikey_cs)
 export(is.inchikey_format)
 export(is.smiles)
+export(nist_ri)
 export(opsin_query)
 export(pan_query)
 export(parse_mol)
