updated get_csid() to handle new ChemSpider API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,10 @@ import(jsonlite)
 import(rvest)
 import(stringr)
 import(xml2)
+importFrom(httr,GET)
+importFrom(httr,POST)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(methods,is)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
