--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Chemical Information from the Web
 Description: Chemical information from around the web. This package interacts
     with a suite of web APIs for chemical information.
 Type: Package
-Version: 0.4.0.9003
+Version: 0.4.0.9004
 Date: 2018-04-12
 License: MIT + file LICENSE
 URL: https://github.com/ropensci/webchem
@@ -14,7 +14,8 @@ Authors@R: c(person("Eduard", "Szöcs", role = c("aut", "cre"),
     person("Johannes", "Ranke", role = "ctb"),
     person("Eric R", "Scott", role = "ctb"),
     person("Jan", "Stanstrup", role = "ctb"),
-    person("Robert", "Allaway", role = "ctb"))
+    person("Robert", "Allaway", role = "ctb"),
+    person("Tamas", "Stirling", role = "ctb"))
 Maintainer: Eduard Szöcs <eduardszoecs@gmail.com>
 LazyLoad: yes
 LazyData: yes
