news + tests + man

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,8 +52,10 @@ export(etox_tests)
 export(extr_num)
 export(fn_percept)
 export(get_cid)
+export(get_comp_entity)
 export(get_csid)
 export(get_etoxid)
+export(get_lite_entity)
 export(get_wdid)
 export(inchikey)
 export(is.cas)
