changed function names 2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(as.cas)
 export(aw_query)
 export(build_aw_idx)
 export(cas)
+export(chebi_comp_entity)
+export(chebi_lite_entity)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
@@ -52,10 +54,8 @@ export(etox_tests)
 export(extr_num)
 export(fn_percept)
 export(get_cid)
-export(get_comp_entity)
 export(get_csid)
 export(get_etoxid)
-export(get_lite_entity)
 export(get_wdid)
 export(inchikey)
 export(is.cas)
