added new function cs_datasources()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(cir_query)
 export(cs_compinfo)
 export(cs_convert)
 export(cs_csid_mol)
+export(cs_datasources)
 export(cs_extcompinfo)
 export(cs_inchi_csid)
 export(cs_inchi_inchikey)
@@ -87,6 +88,7 @@ import(stringr)
 import(xml2)
 importFrom(httr,GET)
 importFrom(httr,POST)
+importFrom(httr,add_headers)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(methods,is)
