changed appveyor to not install packages from source

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ environment:
     R_BUILD_ARGS: --no-manual
     R_CHECK_ARGS: --no-build-vignettes --no-manual --timings --as-cran --no-multiarch
     R_INSTALL_ARGS: --no-multiarch
+    PKGTYPE: binary
 
 init:
   ps: |
