--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(build_aw_idx)
 export(cas)
 export(chebi_comp_entity)
 export(chebi_lite_entity)
+export(chooser)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
