--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,5 +102,6 @@ importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
 importFrom(utils,globalVariables)
+importFrom(utils,head)
 importFrom(utils,menu)
 importFrom(utils,read.table)
