Adding basic function for searching EPA Substance Registry Services REST

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(ppdb)
 export(ppdb_parse)
 export(ppdb_query)
 export(smiles)
+export(srs_query)
 export(wd_ident)
 import(RCurl)
 import(dplyr)
