--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Authors@R: c(person("Eduard", "Szöcs", role = c("aut", "cre"),
     person("Johannes", "Ranke", role = "ctb"),
     person("Eric R", "Scott", role = "ctb"),
     person("Jan", "Stanstrup", role = "ctb"),
-    person("Robert", "Allaway", role = "ctb"))
+    person("Robert", "Allaway", role = "ctb"),
+    person("Gordon", "Getzinger", role = "ctb"))
 Maintainer: Eduard Szöcs <eduardszoecs@gmail.com>
 LazyLoad: yes
 LazyData: yes
@@ -34,4 +35,4 @@ Imports:
 Suggests:
     testthat,
     rcdk
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
