--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,6 @@ export(cs_convert)
 export(cs_datasources)
 export(cs_element_csid)
 export(cs_extcompinfo)
-export(cs_name_csid)
 export(cs_prop)
 export(cts_compinfo)
 export(cts_convert)
@@ -50,6 +49,7 @@ export(etox_tests)
 export(extr_num)
 export(fn_percept)
 export(get_cid)
+export(get_csid)
 export(get_etoxid)
 export(get_wdid)
 export(inchikey)
