--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ export(ci_query)
 export(cid_compinfo)
 export(cir)
 export(cir_query)
+export(cs_check_key)
+export(cs_check_token)
 export(cs_compinfo)
 export(cs_control)
 export(cs_convert)
