--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,12 @@ URL: https://github.com/ropensci/webchem
 BugReports: https://github.com/ropensci/webchem/issues
 Authors@R: c(person("Eduard", "Szöcs", role = c("aut", "cre"),
     email = "eduardszoecs@gmail.com"),
+    person("Robert", "Allaway", role = "ctb"),    
     person("Daniel", "Muench", role = "ctb"),
     person("Johannes", "Ranke", role = "ctb"),
+    person("Andreas", "Scharmüller", role = "ctb"),        
     person("Eric R", "Scott", role = "ctb"),
     person("Jan", "Stanstrup", role = "ctb"),
-    person("Robert", "Allaway", role = "ctb"),
     person("Tamás", "Stirling", role = "ctb"))
 Maintainer: Tamás Stirling <stirling.tamas@gmail.com>
 LazyLoad: yes
