--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R: c(person("Eduard", "Szöcs", role = c("aut", "cre"),
     person("Andreas", "Scharmüller", role = "ctb"),        
     person("Eric R", "Scott", role = "ctb"),
     person("Jan", "Stanstrup", role = "ctb"),
-    person("Gordon", "Getzinger", role = "ctb"))
+    person("Gordon", "Getzinger", role = "ctb"),
     person("Tamás", "Stirling", role = "ctb"))
 Maintainer: Tamás Stirling <stirling.tamas@gmail.com>
 LazyLoad: yes
