Fix get_etoxid() for all match types

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ import(jsonlite)
 import(rvest)
 import(stringr)
 import(xml2)
+importFrom(dplyr,bind_rows)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
