changed ChEBI function name and added match= argument

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,6 @@ export(aw_query)
 export(build_aw_idx)
 export(cas)
 export(chebi_comp_entity)
-export(chebi_lite_entity)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
@@ -46,6 +45,7 @@ export(etox_basic)
 export(etox_targets)
 export(etox_tests)
 export(fn_percept)
+export(get_chebiid)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
