--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(methods,is)
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(purrr,map_dfr)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
