--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(nist_ri)
 export(opsin_query)
 export(pan_query)
 export(parse_mol)
+export(pc_extract)
 export(pc_prop)
 export(pc_synonyms)
 export(ping_cs)
@@ -79,6 +80,8 @@ import(jsonlite)
 import(rvest)
 import(stringr)
 import(xml2)
+importFrom(data.tree,FindNode)
+importFrom(data.tree,as.Node)
 importFrom(dplyr,bind_rows)
 importFrom(httr,GET)
 importFrom(httr,POST)
