Updates to a new PubChem functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(opsin_query)
 export(pan_query)
 export(parse_mol)
 export(pc_extract)
+export(pc_page)
 export(pc_prop)
 export(pc_synonyms)
 export(ping_cs)
@@ -82,6 +83,7 @@ import(stringr)
 import(xml2)
 importFrom(data.tree,FindNode)
 importFrom(data.tree,as.Node)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(httr,GET)
 importFrom(httr,POST)
