nist_ri() now works with name, inchi, inchikey, and cas queries

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,9 @@ Imports:
     methods,
     dplyr,
     purrr,
-    urltools
+    urltools,
+    polite,
+    rlang
 Suggests:
     testthat,
     rcdk
