--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ importFrom(methods,is)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_dfr)
+importFrom(rlang,list2)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
 importFrom(stats,setNames)
