deprecated cas argument and fixed imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ importFrom(rlang,list2)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
 importFrom(stats,setNames)
+importFrom(tibble,as_tibble)
 importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
