Now should work with NAs better.  NAs as queries and NAs generated during search both result in consistent output now.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ importFrom(rvest,html_table)
 importFrom(stats,rgamma)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
+importFrom(tidyr,replace_na)
 importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
